tests/ui/type-alias-impl-trait/issue-53092.stderr
error[E0277]: the trait bound `U: From<T>` is not satisfied
  --> $DIR/issue-53092.rs:14:5
   |
LL |     |x| x.into()
   |     ^^^^^^^^^^^^ the trait `From<T>` is not implemented for `U`
   |
note: required by a bound in `make_bug`
  --> $DIR/issue-53092.rs:13:19
   |
LL | fn make_bug<T, U: From<T>>() -> Bug<T, U> {
   |                   ^^^^^^^ required by this bound in `make_bug`
help: consider restricting type parameter `U`
   |
LL | type Bug<T, U: std::convert::From<T>> = impl Fn(T) -> U + Copy;
   |              +++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
